--- a/interfaces/iparseopenrpcdocumentoptions.html
+++ b/interfaces/iparseopenrpcdocumentoptions.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ReadResult | @open-rpc/schema-utils-js</title>
+	<title>IParseOpenRPCDocumentOptions | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,21 +54,33 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="readresult.html">ReadResult</a>
+					<a href="iparseopenrpcdocumentoptions.html">IParseOpenRPCDocumentOptions</a>
 				</li>
 			</ul>
-			<h1>Interface ReadResult</h1>
+			<h1>Interface IParseOpenRPCDocumentOptions</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>Options that may be passed to parseOpenRPCDocument.</p>
+					</div>
+					<dl class="tsd-comment-tags">
+						<dt>category</dt>
+						<dd><p>Options</p>
+						</dd>
+					</dl>
+				</div>
+			</section>
 			<section class="tsd-panel tsd-hierarchy">
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ReadResult</span>
+						<span class="target">IParseOpenRPCDocumentOptions</span>
 					</li>
 				</ul>
 			</section>
@@ -76,35 +88,35 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-external">
+						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="readresult.html#buffer" class="tsd-kind-icon">buffer</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="readresult.html#bytesread" class="tsd-kind-icon">bytes<wbr>Read</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iparseopenrpcdocumentoptions.html#dereference" class="tsd-kind-icon">dereference</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="iparseopenrpcdocumentoptions.html#validate" class="tsd-kind-icon">validate</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="buffer" class="tsd-anchor"></a>
-					<h3>buffer</h3>
-					<div class="tsd-signature tsd-kind-icon">buffer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Buffer</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="dereference" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> dereference</h3>
+					<div class="tsd-signature tsd-kind-icon">dereference<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/fs-extra/index.d.ts:317</li>
+							<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/07a2b29/src/parse-open-rpc-document.ts#L58">src/parse-open-rpc-document.ts:58</a></li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="bytesread" class="tsd-anchor"></a>
-					<h3>bytes<wbr>Read</h3>
-					<div class="tsd-signature tsd-kind-icon">bytes<wbr>Read<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="validate" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> validate</h3>
+					<div class="tsd-signature tsd-kind-icon">validate<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/fs-extra/index.d.ts:316</li>
+							<li>Defined in <a href="https://github.com/open-rpc/schema-utils-js/blob/07a2b29/src/parse-open-rpc-document.ts#L50">src/parse-open-rpc-document.ts:50</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -122,14 +134,14 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="readresult.html" class="tsd-kind-icon">Read<wbr>Result</a>
+					<li class="current tsd-kind-interface">
+						<a href="iparseopenrpcdocumentoptions.html" class="tsd-kind-icon">IParse<wbr>OpenRPCDocument<wbr>Options</a>
 						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="readresult.html#buffer" class="tsd-kind-icon">buffer</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="iparseopenrpcdocumentoptions.html#dereference" class="tsd-kind-icon">dereference</a>
 							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="readresult.html#bytesread" class="tsd-kind-icon">bytes<wbr>Read</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="iparseopenrpcdocumentoptions.html#validate" class="tsd-kind-icon">validate</a>
 							</li>
 						</ul>
 					</li>
