--- a/interfaces/linkobject.html
+++ b/interfaces/linkobject.html
@@ -67,7 +67,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>Links</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
@@ -113,40 +113,40 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#linkdescription" class="tsd-signature-type">LinkDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:216</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:247</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="method" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> method</h3>
-					<div class="tsd-signature tsd-kind-icon">method<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">method<span class="tsd-signature-symbol">:</span> <a href="../globals.html#linkmethod" class="tsd-signature-type">LinkMethod</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:215</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:246</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#linkname" class="tsd-signature-type">LinkName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:213</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:244</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="params" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> params</h3>
-					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
+					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <a href="linkparams.html" class="tsd-signature-type">LinkParams</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:217</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:248</li>
 						</ul>
 					</aside>
 				</section>
@@ -156,17 +156,17 @@
 					<div class="tsd-signature tsd-kind-icon">server<span class="tsd-signature-symbol">:</span> <a href="serverobject.html" class="tsd-signature-type">ServerObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:218</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:249</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="summary" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> summary</h3>
-					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">summary<span class="tsd-signature-symbol">:</span> <a href="../globals.html#linksummary" class="tsd-signature-type">LinkSummary</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:214</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:245</li>
 						</ul>
 					</aside>
 				</section>
