--- a/interfaces/referenceobject.html
+++ b/interfaces/referenceobject.html
@@ -90,10 +90,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="_ref" class="tsd-anchor"></a>
 					<h3>$ref</h3>
-					<div class="tsd-signature tsd-kind-icon">$ref<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">$ref<span class="tsd-signature-symbol">:</span> <a href="../globals.html#_ref" class="tsd-signature-type">$Ref</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:165</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:204</li>
 						</ul>
 					</aside>
 				</section>
