--- a/interfaces/requestinit.html
+++ b/interfaces/requestinit.html
@@ -86,6 +86,7 @@
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#headers" class="tsd-kind-icon">headers</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#method" class="tsd-kind-icon">method</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#redirect" class="tsd-kind-icon">redirect</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#signal" class="tsd-kind-icon">signal</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#size" class="tsd-kind-icon">size</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="requestinit.html#timeout" class="tsd-kind-icon">timeout</a></li>
 							</ul>
@@ -101,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">agent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Agent</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:47</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:50</li>
 						</ul>
 					</aside>
 				</section>
@@ -111,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bodyinit" class="tsd-signature-type">BodyInit</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:41</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:43</li>
 						</ul>
 					</aside>
 				</section>
@@ -121,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">compress<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">true</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:48</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:51</li>
 						</ul>
 					</aside>
 				</section>
@@ -131,7 +132,7 @@
 					<div class="tsd-signature tsd-kind-icon">follow<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:49</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:52</li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +142,7 @@
 					<div class="tsd-signature tsd-kind-icon">headers<span class="tsd-signature-symbol">:</span> <a href="../globals.html#headersinit" class="tsd-signature-type">HeadersInit</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:42</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:44</li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">method<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:43</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:45</li>
 						</ul>
 					</aside>
 				</section>
@@ -161,7 +162,17 @@
 					<div class="tsd-signature tsd-kind-icon">redirect<span class="tsd-signature-symbol">:</span> <a href="../globals.html#requestredirect" class="tsd-signature-type">RequestRedirect</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:44</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:46</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="signal" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> signal</h3>
+					<div class="tsd-signature tsd-kind-icon">signal<span class="tsd-signature-symbol">:</span> <a href="abortsignal.html" class="tsd-signature-type">AbortSignal</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:47</li>
 						</ul>
 					</aside>
 				</section>
@@ -171,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">size<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:50</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:53</li>
 						</ul>
 					</aside>
 				</section>
@@ -181,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">timeout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/node-fetch/index.d.ts:51</li>
+							<li>Defined in node_modules/@types/node-fetch/index.d.ts:54</li>
 						</ul>
 					</aside>
 				</section>
@@ -222,6 +233,9 @@
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 								<a href="requestinit.html#redirect" class="tsd-kind-icon">redirect</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="requestinit.html#signal" class="tsd-kind-icon">signal</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 								<a href="requestinit.html#size" class="tsd-kind-icon">size</a>
