--- a/interfaces/tagobject.html
+++ b/interfaces/tagobject.html
@@ -67,7 +67,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>Tags</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
@@ -110,10 +110,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#tagdescription" class="tsd-signature-type">TagDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:144</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:183</li>
 						</ul>
 					</aside>
 				</section>
@@ -123,17 +123,17 @@
 					<div class="tsd-signature tsd-kind-icon">external<wbr>Docs<span class="tsd-signature-symbol">:</span> <a href="externaldocumentationobject.html" class="tsd-signature-type">ExternalDocumentationObject</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:145</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:184</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#tagname" class="tsd-signature-type">TagName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:143</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:182</li>
 						</ul>
 					</aside>
 				</section>
