--- a/interfaces/components.html
+++ b/interfaces/components.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>TransformCaller | @open-rpc/schema-utils-js</title>
+	<title>Components | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="transformcaller.html">TransformCaller</a>
+					<a href="components.html">Components</a>
 				</li>
 			</ul>
-			<h1>Interface TransformCaller</h1>
+			<h1>Interface Components</h1>
 		</div>
 	</div>
 </header>
@@ -68,9 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">TransformCaller</span>
+						<span class="target">Components</span>
 					</li>
 				</ul>
+			</section>
+			<section class="tsd-panel tsd-kind-interface tsd-is-external">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -79,8 +83,12 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="transformcaller.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="transformcaller.html#supportsstaticesm" class="tsd-kind-icon">supports<wbr>StaticESM</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#contentdescriptors" class="tsd-kind-icon">content<wbr>Descriptors</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#examplepairings" class="tsd-kind-icon">example<wbr>Pairings</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#examples" class="tsd-kind-icon">examples</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#links" class="tsd-kind-icon">links</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#schemas" class="tsd-kind-icon">schemas</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="components.html#tags" class="tsd-kind-icon">tags</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,22 +97,62 @@
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="name" class="tsd-anchor"></a>
-					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<a name="contentdescriptors" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> content<wbr>Descriptors</h3>
+					<div class="tsd-signature tsd-kind-icon">content<wbr>Descriptors<span class="tsd-signature-symbol">:</span> <a href="contentdescriptors.html" class="tsd-signature-type">ContentDescriptors</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/babel__core/index.d.ts:309</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:293</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="supportsstaticesm" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> supports<wbr>StaticESM</h3>
-					<div class="tsd-signature tsd-kind-icon">supports<wbr>StaticESM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">false</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">true</span></div>
+					<a name="examplepairings" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> example<wbr>Pairings</h3>
+					<div class="tsd-signature tsd-kind-icon">example<wbr>Pairings<span class="tsd-signature-symbol">:</span> <a href="examplepairings.html" class="tsd-signature-type">ExamplePairings</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@types/babel__core/index.d.ts:311</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:292</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="examples" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> examples</h3>
+					<div class="tsd-signature tsd-kind-icon">examples<span class="tsd-signature-symbol">:</span> <a href="examples.html" class="tsd-signature-type">Examples</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:291</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="links" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> links</h3>
+					<div class="tsd-signature tsd-kind-icon">links<span class="tsd-signature-symbol">:</span> <a href="links.html" class="tsd-signature-type">Links</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:290</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="schemas" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> schemas</h3>
+					<div class="tsd-signature tsd-kind-icon">schemas<span class="tsd-signature-symbol">:</span> <a href="schemas.html" class="tsd-signature-type">Schemas</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:289</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="tags" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> tags</h3>
+					<div class="tsd-signature tsd-kind-icon">tags<span class="tsd-signature-symbol">:</span> <a href="tags.html" class="tsd-signature-type">Tags</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:294</li>
 						</ul>
 					</aside>
 				</section>
@@ -123,13 +171,25 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="transformcaller.html" class="tsd-kind-icon">Transform<wbr>Caller</a>
+						<a href="components.html" class="tsd-kind-icon">Components</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="transformcaller.html#name" class="tsd-kind-icon">name</a>
+								<a href="components.html#contentdescriptors" class="tsd-kind-icon">content<wbr>Descriptors</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="transformcaller.html#supportsstaticesm" class="tsd-kind-icon">supports<wbr>StaticESM</a>
+								<a href="components.html#examplepairings" class="tsd-kind-icon">example<wbr>Pairings</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="components.html#examples" class="tsd-kind-icon">examples</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="components.html#links" class="tsd-kind-icon">links</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="components.html#schemas" class="tsd-kind-icon">schemas</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="components.html#tags" class="tsd-kind-icon">tags</a>
 							</li>
 						</ul>
 					</li>
