--- a/interfaces/examplepairingobject.html
+++ b/interfaces/examplepairingobject.html
@@ -67,7 +67,7 @@
 			<section class="tsd-panel tsd-comment">
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>ExamplePairings</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
@@ -85,7 +85,7 @@
 				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 				<div class="tsd-comment tsd-typography">
 					<div class="lead">
-						<p>This interface was referenced by <code>undefined</code>&#39;s JSON-Schema definition
+						<p>This interface was referenced by <code>ExamplePairings</code>&#39;s JSON-Schema definition
 						via the <code>patternProperty</code> &quot;[0-z]+&quot;.</p>
 					</div>
 				</div>
@@ -111,40 +111,40 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="description" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> description</h3>
-					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">description<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingdescription" class="tsd-signature-type">ExamplePairingDescription</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:231</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:265</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="name" class="tsd-anchor"></a>
 					<h3>name</h3>
-					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingtype" class="tsd-signature-type">ExamplePairingType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:230</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:264</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="params" class="tsd-anchor"></a>
 					<h3>params</h3>
-					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="exampleobject.html" class="tsd-signature-type">ExampleObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
+					<div class="tsd-signature tsd-kind-icon">params<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingparams" class="tsd-signature-type">ExamplePairingParams</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:232</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:266</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="result" class="tsd-anchor"></a>
 					<h3>result</h3>
-					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="exampleobject.html" class="tsd-signature-type">ExampleObject</a><span class="tsd-signature-symbol"> | </span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a></div>
+					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <a href="../globals.html#examplepairingresult" class="tsd-signature-type">ExamplePairingResult</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:233</li>
+							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:267</li>
 						</ul>
 					</aside>
 				</section>
