--- a/interfaces/tags.html
+++ b/interfaces/tags.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>OneOfObject | @open-rpc/schema-utils-js</title>
+	<title>Tags | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="oneofobject.html">OneOfObject</a>
+					<a href="tags.html">Tags</a>
 				</li>
 			</ul>
-			<h1>Interface OneOfObject</h1>
+			<h1>Interface Tags</h1>
 		</div>
 	</div>
 </header>
@@ -68,35 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">OneOfObject</span>
+						<span class="target">Tags</span>
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel-group tsd-index-group">
-				<h2>Index</h2>
-				<section class="tsd-panel tsd-index-panel">
-					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-external">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="oneofobject.html#oneof" class="tsd-kind-icon">one<wbr>Of</a></li>
-							</ul>
-						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-external">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-					<a name="oneof" class="tsd-anchor"></a>
-					<h3>one<wbr>Of</h3>
-					<div class="tsd-signature tsd-kind-icon">one<wbr>Of<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><a href="referenceobject.html" class="tsd-signature-type">ReferenceObject</a><span class="tsd-signature-symbol"> | </span><a href="contentdescriptorobject.html" class="tsd-signature-type">ContentDescriptorObject</a><span class="tsd-signature-symbol"> | </span><a href="oneofobject.html" class="tsd-signature-type">OneOfObject</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in node_modules/@open-rpc/meta-schema/build/src/index.d.ts:187</li>
-						</ul>
-					</aside>
-				</section>
+			<section class="tsd-panel tsd-kind-interface tsd-is-external">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><a href="tagobject.html" class="tsd-signature-type">TagObject</a></div>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -112,12 +90,7 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="oneofobject.html" class="tsd-kind-icon">One<wbr>OfObject</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
-								<a href="oneofobject.html#oneof" class="tsd-kind-icon">one<wbr>Of</a>
-							</li>
-						</ul>
+						<a href="tags.html" class="tsd-kind-icon">Tags</a>
 					</li>
 				</ul>
 				<ul class="after-current">
